test/regress/coverage-item-tag-errors.test
; Test item.cc: tag() and has_tag() error paths
; Exercises tag() with 0 args (line 293-294), too many args (line 295-296)
; Exercises tag() with bad arg type (line 283-285)
; Exercises tag() with 2 string args (line 289-292)
; Exercises has_tag() with 0 args (line 266-267), too many args (line 268-269)
; Exercises has_tag() with bad arg type (line 256-258)
; Exercises has_tag() with 2 string args (line 262-265)

2024/01/15 Grocery Store
    Expenses:Food    $50.00
    Assets:Checking

test reg --format "%(tag())\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag()
  ^^^^^
While calling function 'tag ':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too few arguments to function
end test

test reg --format "%(tag(\"a\", \"b\", \"c\"))\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag("a", "b", "c")
  ^^^^^^^^^^^^^^^^^^
While calling function 'tag (<#EXPR "a">, <#EXPR "b">, <#EXPR "c">)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too many arguments to function
end test

test reg --format "%(tag(5))\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag(5)
  ^^^^^^
While calling function 'tag 5':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected string or mask for argument 1, but received an amount
end test

test reg --format "%(tag(\"a\", \"b\"))\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag("a", "b")
  ^^^^^^^^^^^^^
While calling function 'tag (a, b)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected masks for arguments 1 and 2, but received a string and a string
end test

test reg --limit "has_tag()" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag() & (account =~ /Expenses/))
   ^^^^^^^^^
While calling function 'has_tag ':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too few arguments to function
end test

test reg --limit "has_tag(\"a\", \"b\", \"c\")" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag("a", "b", "c") & (account =~ /Expenses/))
   ^^^^^^^^^^^^^^^^^^^^^^
While calling function 'has_tag (<#EXPR "a">, <#EXPR "b">, <#EXPR "c">)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too many arguments to function
end test

test reg --limit "has_tag(5)" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag(5) & (account =~ /Expenses/))
   ^^^^^^^^^^
While calling function 'has_tag 5':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected string or mask for argument 1, but received an amount
end test

test reg --limit "has_tag(\"a\", \"b\")" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag("a", "b") & (account =~ /Expenses/))
   ^^^^^^^^^^^^^^^^^
While calling function 'has_tag (a, b)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected masks for arguments 1 and 2, but received a string and a string
end test
